# sentra

./: .env.bak  .env.example  .env.prod.check  .env.prod.clean  .env.prod.final  .env.prod.final-check  .env.prod.verify  .env.production.actual  .env.vercel.production  .gitignore  .mcp.json  .prettierignore  ADR_0001_CONTAINER_SECURITY.md  ANTHROPIC-AGENT-SAFETY-RESEARCH.md  API-MIGRATION-SUMMARY.md  BACKEND-MIGRATION-COMPLETE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CRITICAL_SECURITY_FINDINGS.md  CROSS-PLATFORM-AUDIO-IMPLEMENTATION.md  DATABASE_URL.txt  DEPLOYMENT-READY.md  DEPLOYMENT.md  DEVELOPMENT.md  DIAGNOSIS.md  DRIZZLE-IMPLEMENTATION-COMPLETE.md  ENCRYPTION_SECRET.txt  FILES-CREATED.md  HANDOFF-SESSION.md  HANDOVER-2025-11-13-EVENING.md  HANDOVER-2025-11-13.md  HANDOVER-2025-11-17-SENTRA-COMPLETE-VISION.md  HANDOVER.md  IMPLEMENTATION-COMPLETE.md  IMPLEMENTATION-STATUS.md  IMPLEMENTATION-SUMMARY-COST-TRACKING.md  INSTALLATION-COMPLETE.md  JWT_REFRESH_SECRET.txt  JWT_SECRET.txt  (+52 more)
.bmad-core/: install-manifest.yaml
.claude/: Dockerfile  settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.quetrex/: DESIGN-GENERATION-SPEC.md  DESIGN-GENERATION-TASKS.md  PHASE-2-COMPLETION-SUMMARY.md  PHASE-3-2-PROGRESS.md  README.md  config.yml  dependency-graph.example.yml  dependency-graph.yml  status.yml
.sentra/: DESIGN-GENERATION-SPEC.md  DESIGN-GENERATION-TASKS.md  PHASE-2-COMPLETION-SUMMARY.md  PHASE-3-2-PROGRESS.md  README.md  config.yml  dependency-graph-bookmark-test.yml  dependency-graph.example.yml  dependency-graph.yml  status.yml
backend/: README.md  test-setup.ts  tsconfig.json
deploy/: .env  .env.example  .env.production  .eslintrc.js  CLAUDE.md  Dockerfile.evolution-dev  EVOLUTIONARY_AGENTS_IMPLEMENTATION_PLAN.md  README.md  SENTRA_EVOLUTIONARY_EPICS.md  SENTRA_MASTER_PLAN.md  (+11 more)
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: activity.rs  agent_stream.rs  agents.rs  architect.rs  commands.rs  git.rs  lib.rs  performance.rs  pr.rs  realtime_proxy.rs  settings.rs  specs.rs  templates.rs  tray.rs  watcher.rs
src-tauri/tests/: agent_stream_test.rs  performance_test.rs  project_commands_test.rs  settings_test.rs  templates_test.rs
(+1034 files in other folders)
