[package]
name = "sentra"
version = "0.1.0"
description = "Sentra - AI Agent Control Center"
authors = ["Glen Barnhardt"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-updater = "2"
dirs = "5.0"
notify = "6.1"
notify-debouncer-full = "0.3"
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
shellexpand = "3.1"
chrono = "0.4"
regex = "1.10"
git2 = "0.18"
rodio = "0.17"
uuid = { version = "1.6", features = ["v4"] }
lazy_static = "1.4"
base64 = "0.21"

[dev-dependencies]
tempfile = "3.8"
